# router/router.go
@@ -13,6 +13,10 @@ func Router() *gin.Engine {
 	docs.SwaggerInfo.BasePath = "" // 设置基础路由 比如这里设置为空 后面访问接口就是从空开始 "/index"
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/index", service.GetIndex)
-	r.GET("/getUsers", service.GetUsers)
+	// 用户相关
+	r.GET("/user/getUsers", service.GetUsers)
+	r.GET("/user/createUser", service.CreateUser)
+	r.GET("/user/deleteUser", service.DeleteUser)
+	r.POST("/user/updateUser", service.UpdateUser)
 	return r
 }
